# Masterthesis-Supplementary

./: .gitattributes  .gitignore  Dockerfile  Pipfile  README.md  requirements.txt
experiments/: Pipfile
experiments/02_Compare/: R_playground.ipynb
experiments/03_Acinar_R_analysis/: .Rhistory  Export_Results.R  acinar_psupplementary_analysis.ipynb  profile_psupertime.r  psupertime_rprof.out  psupertime_rprof_beta.out  psupertime_rprof_germ.out  psupertime_rprof_hesc.out  psupertime_rprof_mef.out  psupertime_rprofile_acinar.out  test_scores.csv  train_scores.csv  weights.csv
experiments/04B_BenchmarkDataset/: Simdata.ipynb  Untitled.ipynb
experiments/04B_Pytorch/: Pytorch.ipynb  models.py
experiments/04C_CompareResults/: Compare.ipynb  CompareAcinar.ipynb  CompareAcinarGenes.ipynb  CompareResults.ipynb  CompareSimdata.ipynb  CompareSimulations.ipynb  RunAcinar.ipynb  RunSimdata.ipynb  Simulation.ipynb  genes-R-2.txt  genes-R.txt  genes_py_1.txt  genes_py_2.txt  genes_py_3.txt  genes_py_4-elastic-08.txt  genes_py_5-elastic08.txt  go-genelist-py-cluster-1.csv  go-genelist-py-cluster-2.csv  go-genelist-py-cluster-3.csv  go-genelist-py-cluster-4.csv  go-genelist-py-elastic.csv  go-genelist-py.csv  go-genelist-r-cluster-2.csv  go-genelist-r-cluster-3.csv  go-genelist-r-cluster-4.csv  go-genelist-r.csv  go-genelist-rest-0.csv  (+16 more)
masterthesis/: README.md  pyproject.toml
masterthesis/src/masterthesis/: data.py  metrics.py  model.py  model_selection.py  plots.py  preprocessing.py  psupertime.py  psupplementary.py  timing.py
presentation/: Illustrations.ipynb
(+988 files in other folders)
